Issue-86:- Show readable date format in tasks

--- a/src/components/tasks/card/card.module.scss
+++ b/src/components/tasks/card/card.module.scss
@@ -49,3 +49,42 @@
   color: grey;
   font-weight: bold;
 }
+
+.datetime {
+  display: block;
+  position: relative;
+
+  &:hover {
+    .nothover {
+      visibility: hidden;
+      opacity: 0;
+    }
+    .onhover{
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  .nothover {
+    cursor: pointer;
+    transition: all 350ms ease-in-out;
+  }
+
+  .onhover {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+    transition: all 350ms ease-in-out;
+    span {
+      position: unset;
+      visibility: unset;
+      opacity: unset;
+    }
+  }
+  
+  .onhover {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
